[gd_scene load_steps=10 format=4 uid="uid://dqahq5hbrb1oa"]

[ext_resource type="Script" uid="uid://v3jgjympeppe" path="res://scripts/main.gd" id="1_tbgi4"]
[ext_resource type="Texture2D" uid="uid://dm4cbiooemj51" path="res://assets/backGround.png" id="2_tbgi4"]
[ext_resource type="PackedScene" uid="uid://cmkhsm5b48ug8" path="res://scenes/bird.tscn" id="2_tefeu"]
[ext_resource type="PackedScene" uid="uid://bjyuqgofoyosr" path="res://scenes/seed_selection_menu.tscn" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://cbbktumd7pycl" path="res://scenes/tile_map_layer.tscn" id="4_tbgi4"]
[ext_resource type="PackedScene" uid="uid://djufr2nq72uc6" path="res://scenes/gold_counter.tscn" id="4_tefeu"]
[ext_resource type="PackedScene" uid="uid://c3bgdxesfokge" path="res://scenes/ground.tscn" id="7_o6xl0"]
[ext_resource type="PackedScene" uid="uid://by1elj6ufj5uq" path="res://scenes/cursor.tscn" id="8_tipki"]

[sub_resource type="Curve2D" id="Curve2D_tbgi4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 320, 0, 0, 0, 0, 0, 320, 184, 0, 0, 0, 0, 0, 184, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="main" type="Node"]
script = ExtResource("1_tbgi4")
bird_scene = ExtResource("2_tefeu")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(160, 92)
scale = Vector2(64, 26.2857)
texture = ExtResource("2_tbgi4")

[node name="TileMapLayer" parent="." instance=ExtResource("4_tbgi4")]
position = Vector2(192, -16)
tile_map_data = PackedByteArray("AAD4/wIAAAACAAMAAAADAAIAAAADAAMAAAADAAMAAAAHAAUAAAADAAQAAAAHAAUAAAADAAUAAAAHAAUAAAADAAYAAAAHAAUAAAADAAcAAAAHAAUAAAADAAgAAAAHAAUAAAADAAkAAAAHAAUAAAADAAoAAAADAAQAAAD4/woAAAACAAQAAAACAAoAAAAGAAYAAAABAAoAAAAGAAYAAAAAAAoAAAAGAAYAAAD//woAAAAGAAYAAAD+/woAAAAGAAYAAAD9/woAAAAGAAYAAAD8/woAAAAGAAYAAAD7/woAAAAGAAYAAAD6/woAAAAGAAYAAAD5/woAAAAGAAYAAAD4/wkAAAAFAAUAAAD4/wgAAAAFAAUAAAD4/wcAAAAFAAUAAAD4/wYAAAAFAAUAAAD4/wUAAAAFAAUAAAD4/wQAAAAFAAUAAAD4/wMAAAAFAAUAAAD5/wIAAAAGAAQAAAD6/wIAAAAGAAQAAAD7/wIAAAAGAAQAAAD8/wIAAAAGAAQAAAD9/wIAAAAGAAQAAAD+/wIAAAAGAAQAAAD//wIAAAAGAAQAAAAAAAIAAAAGAAQAAAABAAIAAAAGAAQAAAACAAIAAAAGAAQAAAD8/wMAAQAAAAAAAQD9/wMAAQAAAAAAAQD+/wMAAQAAAAAAAQD//wMAAQAAAAAAAQAAAAMAAQAAAAAAAQABAAMAAQAAAAAAAQACAAMAAQAAAAAAAQACAAQAAQAAAAAAAQABAAQAAQAAAAAAAQAAAAQAAQAAAAAAAQD//wQAAQAAAAAAAQD+/wQAAQAAAAAAAQD9/wQAAQAAAAAAAQD8/wQAAQAAAAAAAQD6/wQAAQAAAAAAAQD8/wUAAQAAAAAAAQD9/wUAAQAAAAAAAQD+/wUAAQAAAAAAAQD//wUAAQAAAAAAAQAAAAUAAQAAAAAAAQABAAUAAQAAAAAAAQACAAUAAQAAAAAAAQACAAYAAQAAAAAAAQABAAYAAQAAAAAAAQAAAAYAAQAAAAAAAQD//wYAAQAAAAAAAQD+/wYAAQAAAAAAAQD9/wYAAQAAAAAAAQD8/wYAAQAAAAAAAQD7/wYAAQAAAAAAAQD6/wYAAQAAAAAAAQD5/wYAAQAAAAAAAQD5/wcAAQAAAAAAAQD6/wcAAQAAAAAAAQD7/wcAAQAAAAAAAQD8/wcAAQAAAAAAAQD9/wcAAQAAAAAAAQD+/wcAAQAAAAAAAQD//wcAAQAAAAAAAQAAAAcAAQAAAAAAAQABAAcAAQAAAAAAAQACAAcAAQAAAAAAAQACAAgAAQAAAAAAAQABAAgAAQAAAAAAAQAAAAgAAQAAAAAAAQD//wgAAQAAAAAAAQD+/wgAAQAAAAAAAQD9/wgAAQAAAAAAAQD8/wgAAQAAAAAAAQD7/wgAAQAAAAAAAQD6/wgAAQAAAAAAAQD5/wgAAQAAAAAAAQD5/wkAAQAAAAAAAQD6/wkAAQAAAAAAAQD7/wkAAQAAAAAAAQD8/wkAAQAAAAAAAQD9/wkAAQAAAAAAAQD+/wkAAQAAAAAAAQD//wkAAQAAAAAAAQAAAAkAAQAAAAAAAQABAAkAAQAAAAAAAQACAAkAAQAAAAAAAQA=")

[node name="GoldCounter" parent="." instance=ExtResource("4_tefeu")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SeedSelectionMenu" parent="CanvasLayer" instance=ExtResource("4_jyhfs")]

[node name="BirdSpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="BirdSpawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_tbgi4")

[node name="BirdSpawnLocation" type="PathFollow2D" parent="BirdSpawn"]

[node name="OutOfBoundsLocations" type="Node" parent="."]

[node name="OutOfBoundsGround" parent="OutOfBoundsLocations" instance=ExtResource("7_o6xl0")]
position = Vector2(-64, 80)

[node name="OutOfBoundsGround2" parent="OutOfBoundsLocations" instance=ExtResource("7_o6xl0")]
position = Vector2(160, -56)

[node name="OutOfBoundsGround3" parent="OutOfBoundsLocations" instance=ExtResource("7_o6xl0")]
position = Vector2(160, 248)

[node name="OutOfBoundsGround4" parent="OutOfBoundsLocations" instance=ExtResource("7_o6xl0")]
position = Vector2(416, 80)

[node name="Cursor" parent="." instance=ExtResource("8_tipki")]

[node name="SelectedSeed" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[connection signal="timeout" from="BirdSpawnTimer" to="." method="_on_bird_spawn_timer_timeout"]
